{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 45,
  "lineage": "ced7b377-b9bb-496a-4394-8268d4cc8314",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cca134ec43cf708f",
            "arn": "arn:aws:ec2:ap-south-1:827437015507:instance/i-0365ba12b5cc8aabc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0365ba12b5cc8aabc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "git",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed994b003f2ce707",
            "private_dns": "ip-10-0-0-199.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.199",
            "public_ip": "65.0.205.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-086f10a4700359091",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033d6444224d295e7",
            "tags": {
              "Name": "My Public Instance"
            },
            "tags_all": {
              "Name": "My Public Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0719a38d195185e1a"
            ]
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cca134ec43cf708f",
            "arn": "arn:aws:ec2:ap-south-1:827437015507:instance/i-031ac40a60beb4be5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031ac40a60beb4be5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "git",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00712711f61b977c2",
            "private_dns": "ip-10-0-1-17.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.17",
            "public_ip": "13.126.32.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06a5625c0a81bc4eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d47ef956e399d554",
            "tags": {
              "Name": "My Public Instance 2"
            },
            "tags_all": {
              "Name": "My Public Instance 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0719a38d195185e1a"
            ]
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demogateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:827437015507:internet-gateway/igw-013ca55ab922618b9",
            "id": "igw-013ca55ab922618b9",
            "owner_id": "827437015507",
            "vpc_id": "vpc-05816d113292069b5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:loadbalancer/app/External-LB/af3d9ad63a178cd9",
            "arn_suffix": "app/External-LB/af3d9ad63a178cd9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "External-LB-1689959052.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:loadbalancer/app/External-LB/af3d9ad63a178cd9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "External-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0719a38d195185e1a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-033d6444224d295e7"
              },
              {
                "subnet_id": "subnet-0d47ef956e399d554"
              }
            ],
            "subnets": [
              "subnet-033d6444224d295e7",
              "subnet-0d47ef956e399d554"
            ],
            "vpc_id": "vpc-05816d113292069b5",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "target-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:listener/app/External-LB/af3d9ad63a178cd9/7da6c78c52b177ad",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:targetgroup/ALB-TG/baef1689a78cf39d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:listener/app/External-LB/af3d9ad63a178cd9/7da6c78c52b177ad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:loadbalancer/app/External-LB/af3d9ad63a178cd9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external-alb",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:targetgroup/ALB-TG/baef1689a78cf39d",
            "arn_suffix": "targetgroup/ALB-TG/baef1689a78cf39d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:targetgroup/ALB-TG/baef1689a78cf39d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05816d113292069b5"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:targetgroup/ALB-TG/baef1689a78cf39d-20221230100051250900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:targetgroup/ALB-TG/baef1689a78cf39d",
            "target_id": "i-0365ba12b5cc8aabc"
          },
          "dependencies": [
            "aws_instance.demoinstance",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:targetgroup/ALB-TG/baef1689a78cf39d-20221230100051218300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:827437015507:targetgroup/ALB-TG/baef1689a78cf39d",
            "target_id": "i-031ac40a60beb4be5"
          },
          "dependencies": [
            "aws_instance.demoinstance1",
            "aws_lb_target_group.target-elb",
            "aws_security_group.demosg",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:827437015507:route-table/rtb-0ce3343883a4bb8ab",
            "id": "rtb-0ce3343883a4bb8ab",
            "owner_id": "827437015507",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013ca55ab922618b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route to internet"
            },
            "tags_all": {
              "Name": "Route to internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-05816d113292069b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1441dfc8a59ec51",
            "route_table_id": "rtb-0ce3343883a4bb8ab",
            "subnet_id": "subnet-033d6444224d295e7"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.route",
            "aws_subnet.public-subnet-1",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a8342db9e546159",
            "route_table_id": "rtb-0ce3343883a4bb8ab",
            "subnet_id": "subnet-0d47ef956e399d554"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.route",
            "aws_subnet.public-subnet-2",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:827437015507:security-group/sg-0d3cb0192efce109d",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0d3cb0192efce109d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0719a38d195185e1a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database SG",
            "name_prefix": "",
            "owner_id": "827437015507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database SG"
            },
            "tags_all": {
              "Name": "Database SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05816d113292069b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demosg",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demosg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:827437015507:security-group/sg-0719a38d195185e1a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0719a38d195185e1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221229120331115900000001",
            "name_prefix": "terraform-",
            "owner_id": "827437015507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web SG"
            },
            "tags_all": {
              "Name": "Web SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05816d113292069b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:827437015507:subnet/subnet-0cb03c55b565be2c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb03c55b565be2c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827437015507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application Subnet 1"
            },
            "tags_all": {
              "Name": "Application Subnet 1"
            },
            "vpc_id": "vpc-05816d113292069b5"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:827437015507:subnet/subnet-0dbb75cd4ba7d45b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbb75cd4ba7d45b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827437015507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application Subnet 2"
            },
            "tags_all": {
              "Name": "Application Subnet 2"
            },
            "vpc_id": "vpc-05816d113292069b5"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:827437015507:subnet/subnet-05d0294e125f60ee9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d0294e125f60ee9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827437015507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database Subnet 1"
            },
            "tags_all": {
              "Name": "Database Subnet 1"
            },
            "vpc_id": "vpc-05816d113292069b5"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:827437015507:subnet/subnet-04d6017f5429aefdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d6017f5429aefdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827437015507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database Subnet 1"
            },
            "tags_all": {
              "Name": "Database Subnet 1"
            },
            "vpc_id": "vpc-05816d113292069b5"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:827437015507:subnet/subnet-033d6444224d295e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033d6444224d295e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827437015507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web Subnet 1"
            },
            "tags_all": {
              "Name": "Web Subnet 1"
            },
            "vpc_id": "vpc-05816d113292069b5"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:827437015507:subnet/subnet-0d47ef956e399d554",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d47ef956e399d554",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827437015507",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web Subnet 2"
            },
            "tags_all": {
              "Name": "Web Subnet 2"
            },
            "vpc_id": "vpc-05816d113292069b5"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:827437015507:vpc/vpc-05816d113292069b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04666c16fbc2d43b0",
            "default_route_table_id": "rtb-091eb02015ce902cb",
            "default_security_group_id": "sg-084ae89906f8b6d48",
            "dhcp_options_id": "dopt-0b95f71c45a719677",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05816d113292069b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091eb02015ce902cb",
            "owner_id": "827437015507",
            "tags": {
              "Name": "Demo VPC"
            },
            "tags_all": {
              "Name": "Demo VPC"
            }
          }
        }
      ]
    }
  ]
}